# mr-wobbles

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
cad/: balancer_chassis_v1.stl  balancer_chassis_v2.stl  balancer_chassis_v3.stl  balancer_chassis_v4.stl  balancer_chassis_v4_bottom.stl  balancer_chassis_v4_top.stl  balancer_lid_v3.stl  gen_chassis.py
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: imu_map.rs  telemetry.rs
outputs/: Kc_phase1.npy  Kc_real.npy  physical_summary.txt
scripts/: record_gif.py  report_stats.py
src/balancer/: __init__.py  paths.py
src/balancer/params/: robot_params.py
src/balancer/sim/: balance.py  balancer.xml  evaluate.py  lqr_design.py  plant.py
tests/: test_design.py
