[project]
name = "balancer"
version = "0.1.0"
description = "Two-wheel self-balancing robot: MuJoCo sim + LQR controller designed from the real chassis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "scipy>=1.11",
    "numpy>=1.26",
    "trimesh>=4.0",
    "manifold3d>=2.0",
]

[project.scripts]
balancer-params = "balancer.params.robot_params:main"   # physical numbers / L
balancer-design = "balancer.sim.lqr_design:main"         # compute K -> outputs/Kc_real.npy
balancer-sim    = "balancer.sim.balance:main"            # live balancing viewer

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balancer"]
